@@ -1,0 +1,106 @@
+.\" This file is part of gpib-utils.
+.\" For details, see http://sourceforge.net/projects/gpib-utils.
+.\"
+.\" Copyright (C) 2005 Jim Garlick <garlick@speakeasy.net>
+.\"
+.\" gpib-utils is free software; you can redistribute it and/or modify
+.\" it under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 2 of the License, or
+.\" (at your option) any later version.
+.\"
+.\" gpib-utils is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public License
+.\" along with gpib-utils; if not, write to the Free Software Foundation, 
+.\" Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+.TH hp3488 1  2006-05-13 "" "gpib-utils"
+.SH NAME
+hp3488 \- control HP 3488A switch/control unit
+.SH SYNOPSIS
+.nf
+.B hp3488 [\fIOPTIONS\fR]
+.fi
+.SH DESCRIPTION
+\fBhp3488\fR controls the HP 3488A switch/control unit via its GPIB interface.
+The instrument is presumed to be attached to GPIB adapter 0 and configured 
+with an entry in /etc/gpib.conf (see CONFIGURATION below).
+.PP
+\fBhp3488\fR performs actions selected on the command line in a fixed sequence:
+.IP
+.nf
+clear
+perform self test
+list installed options
+open channels
+close channels
+query channel states
+local
+.PP
+If an action is not selected on the command line, it is not performed.
+.SH OPTIONS
+\fBhp3488\fR accepts the following command line options:
+.TP
+\fB\-n\fR, \fB\-\-name\fR
+Override the name used to look up the device in /etc/gpib.conf.
+Default: \fIhp3488\fR.
+.TP
+\fB\-c\fR, \fB\-\-clear\fR
+Clear the instrument, verify its model number, and open all channels.
+.TP
+\fB\-l\fR, \fB\-\-local\fR
+Enable front panel.
+.TP
+\fB\-S\fR, \fB\-\-selftest\fR 
+Perform unit self test.
+.TP
+\fB\-L\fR, \fB\-\-list\fR
+List the cards installed in each slot including model number, description, 
+and valid channel numbers.
+Note: in order to distinguish 44476 and 44477 from 44471 we must close 
+channel 4 and 9 and look for errors, therefore this option may 
+momentarily alter the state of those cards.
+.TP
+\fB\-q\fR, \fB\-\-query\fR \fBcaddr[,caddr]\fR
+Query the state of the specified channels.
+Channel addresses are three digits: card number (1-5) followed by two
+digit channel number as reported by the \fB\-\-list\fR option.
+A single digit is interpreted as a slot number, in which case all
+channels for that slot are reported.
+.TP
+\fB\-0\fR, \fB\-\-open\fR \fBcaddr[,caddr]\fR
+Open the specified channels.
+.TP
+\fB\-1\fR, \fB\-\-close\fR \fBcaddr[,caddr]\fR
+Close the specified channels.
+.TP
+\fB\-Q\fR, \fB\-\-queryall\fR
+Query the state of all channels.  Note: this option will not alter
+the state of any channels, thus it lists 10 channels for the 4-channel 44476 
+and 7-channel 44477 cards (see note under \fB\-\-list\fR description).
+.SH "EXAMPLES"
+.nf
+# This script toggles a relay (slot 2 channel 01) on and off every 5s
+while true; do
+    hp3488 -1 201
+    sleep 5
+    hp3488 -0 201
+    sleep 5
+done
+.fi
+.SH "CONFIGURATION"
+The /etc/gpib.conf entry for this instrument included the following
+parameters:
+.nf
+eos = 0xa
+set-reos = yes
+set-bin = no
+set-xeos = no
+set-eot = yes
+timeout = T3s
+.fi
+.SH "SEE ALSO"
+"HP 3488A Switch/Control Unit: Operating, Programming, and Configuration 
+Manual", Sept. 1, 1995.
